--- a/notebooks/ec3d_exercise_type.ipynb
+++ b/notebooks/ec3d_exercise_type.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8d08bd11",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5862fd6b",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2121d75c",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c93aed62",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7b71a3ed",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3dfe0d71",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "641bcd6e",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c62bf975",
    "metadata": {},
    "outputs": [
@@ -1083,7 +1083,7 @@
        "                               n_iter_no_change=15, random_state=42))])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "8528f55f",
    "metadata": {},
    "outputs": [
@@ -1117,7 +1117,7 @@
      "output_type": "stream",
      "text": [
       "Class order used: ['lunge', 'plank', 'squat']\n",
-      "VALIDATION PERFORMANCE\n",
+      "validation performance\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "       lunge       1.00      1.00      1.00      1913\n",
@@ -1135,14 +1135,14 @@
     "classes = [id_to_class[i] for i in sorted(id_to_class.keys())]\n",
     "print(\"Class order used:\", classes)\n",
     "\n",
-    "print(\"VALIDATION PERFORMANCE\")\n",
+    "print(\"validation performance\")\n",
     "y_val_pred = clf.predict(X_val)\n",
     "print(classification_report(y_val, y_val_pred, target_names=classes))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "42e4f47a",
    "metadata": {},
    "outputs": [
@@ -1150,7 +1150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TEST PERFORMANCE\n",
+      "test performance\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "       lunge       1.00      1.00      1.00      1913\n",
@@ -1169,7 +1169,7 @@
     }
    ],
    "source": [
-    "print(\"TEST PERFORMANCE\")\n",
+    "print(\"test performance\")\n",
     "y_test_pred = clf.predict(X_test)\n",
     "print(classification_report(y_test, y_test_pred, target_names=classes))\n",
     "\n",
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "bdd6fcb6",
    "metadata": {},
    "outputs": [
@@ -1192,10 +1192,10 @@
     }
    ],
    "source": [
-    "os.makedirs(\"models\", exist_ok=True)\n",
+    "os.makedirs(\"../models/type\", exist_ok=True)\n",
     "\n",
-    "joblib.dump(clf, \"../models/ec3d_exercise_type_mlp.pkl\")\n",
-    "joblib.dump(id_to_class, \"../models/ec3d_exercise_type_label_map.pkl\")\n",
+    "joblib.dump(clf, \"../models/type/ec3d_exercise_type_mlp.pkl\")\n",
+    "joblib.dump(id_to_class, \"../models/type/ec3d_exercise_type_label_map.pkl\")\n",
     "\n",
     "print(\"Saved exercise-type model + label map.\")"
    ]
