--- a/angles.ipynb
+++ b/angles.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2ee932a3",
    "metadata": {},
    "outputs": [
@@ -492,10 +492,83 @@
     "\n",
     "    print(df.head())\n",
     "\n",
-    "    os.makedirs(\"Angles\", exist_ok=True)\n",
-    "    out_csv = f\"Angles/{pose_name}.csv\"\n",
+    "    os.makedirs(\"angles\", exist_ok=True)\n",
+    "    out_csv = f\"angles/{pose_name}.csv\"\n",
     "    df.to_csv(out_csv, index=False)\n",
     "    print(\"Saved angles CSV to:\", out_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3be837e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  pose_label                        image_path  left_elbow_angle  \\\n",
+      "0    Downdog  data/Downdog/Images\\00000000.jpg        193.939749   \n",
+      "1    Downdog  data/Downdog/Images\\00000001.jpg        160.523425   \n",
+      "2    Downdog  data/Downdog/Images\\00000002.jpg        168.929797   \n",
+      "3    Downdog  data/Downdog/Images\\00000003.jpg        175.207966   \n",
+      "4    Downdog  data/Downdog/Images\\00000004.jpg        196.852595   \n",
+      "\n",
+      "   right_elbow_angle  left_shoulder_angle  right_shoulder_angle  \\\n",
+      "0         199.042214           183.262344            175.340034   \n",
+      "1         165.983325           181.218875            178.150074   \n",
+      "2         166.998650           169.650461            190.287842   \n",
+      "3         173.291759           188.914927            170.921307   \n",
+      "4         184.687954           194.188427            171.774849   \n",
+      "\n",
+      "   left_knee_angle  right_knee_angle  angle_for_ardhaChandrasana1  \\\n",
+      "0       186.249932        187.856616                   358.892513   \n",
+      "1       181.446741        185.428325                   359.556523   \n",
+      "2       171.887203        172.344633                     0.281002   \n",
+      "3       180.164934        180.759846                     0.222692   \n",
+      "4       187.427279        186.192317                   358.967755   \n",
+      "\n",
+      "   angle_for_ardhaChandrasana2  hand_angle  left_hip_angle  right_hip_angle  \\\n",
+      "0                     1.172412  359.486611      278.429215       277.825847   \n",
+      "1                     0.409024  352.515241       86.378515        83.511490   \n",
+      "2                   359.719951    9.370972       88.749626        86.819791   \n",
+      "3                   359.770327    2.714021       70.659265        68.569748   \n",
+      "4                     1.074590    2.256547      271.754788       270.489851   \n",
+      "\n",
+      "   neck_angle_uk  left_wrist_angle_bk  right_wrist_angle_bk  \n",
+      "0     240.255119           279.715500            279.265069  \n",
+      "1     178.781125            92.348562             90.218126  \n",
+      "2     352.381454            82.517299             81.332269  \n",
+      "3      33.896167            75.985298             75.006717  \n",
+      "4     331.858399           278.549857            276.457471  \n",
+      "Shape: (981, 16)\n",
+      "Saved merged angles to: angles/all_angles.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# merge all csv files into one\n",
+    "RESULTS_DIR = \"angles/\"\n",
+    "all_dfs = []\n",
+    "\n",
+    "for pose_name in POSES:\n",
+    "    csv_path = os.path.join(RESULTS_DIR, f\"{pose_name}.csv\")\n",
+    "    df = pd.read_csv(csv_path)\n",
+    "\n",
+    "    if \"Label\" in df.columns and \"image_path\" not in df.columns:\n",
+    "        df = df.rename(columns={\"Label\": \"image_path\"})\n",
+    "\n",
+    "    all_dfs.append(df)\n",
+    "\n",
+    "# concatenate\n",
+    "df_all = pd.concat(all_dfs, ignore_index=True)\n",
+    "print(df_all.head())\n",
+    "print(\"Shape:\", df_all.shape)\n",
+    "\n",
+    "out_csv = os.path.join(RESULTS_DIR, \"all_angles.csv\")\n",
+    "df_all.to_csv(out_csv, index=False)\n",
+    "print(\"Saved merged angles to:\", out_csv)"
    ]
   }
  ],
