--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "6b7e4319",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "033cfa3c",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "all angles loaded shape: (981, 16)\n"
+      "all angles loaded shape: (981, 14)\n"
      ]
     },
     {
@@ -79,8 +79,6 @@
        "      <th>right_shoulder_angle</th>\n",
        "      <th>left_knee_angle</th>\n",
        "      <th>right_knee_angle</th>\n",
-       "      <th>angle_for_ardhaChandrasana1</th>\n",
-       "      <th>angle_for_ardhaChandrasana2</th>\n",
        "      <th>hand_angle</th>\n",
        "      <th>left_hip_angle</th>\n",
        "      <th>right_hip_angle</th>\n",
@@ -100,8 +98,6 @@
        "      <td>175.340034</td>\n",
        "      <td>186.249932</td>\n",
        "      <td>187.856616</td>\n",
-       "      <td>358.892513</td>\n",
-       "      <td>1.172412</td>\n",
        "      <td>359.486611</td>\n",
        "      <td>278.429215</td>\n",
        "      <td>277.825847</td>\n",
@@ -119,8 +115,6 @@
        "      <td>178.150074</td>\n",
        "      <td>181.446741</td>\n",
        "      <td>185.428325</td>\n",
-       "      <td>359.556523</td>\n",
-       "      <td>0.409024</td>\n",
        "      <td>352.515241</td>\n",
        "      <td>86.378515</td>\n",
        "      <td>83.511490</td>\n",
@@ -138,8 +132,6 @@
        "      <td>190.287842</td>\n",
        "      <td>171.887203</td>\n",
        "      <td>172.344633</td>\n",
-       "      <td>0.281002</td>\n",
-       "      <td>359.719951</td>\n",
        "      <td>9.370972</td>\n",
        "      <td>88.749626</td>\n",
        "      <td>86.819791</td>\n",
@@ -157,8 +149,6 @@
        "      <td>170.921307</td>\n",
        "      <td>180.164934</td>\n",
        "      <td>180.759846</td>\n",
-       "      <td>0.222692</td>\n",
-       "      <td>359.770327</td>\n",
        "      <td>2.714021</td>\n",
        "      <td>70.659265</td>\n",
        "      <td>68.569748</td>\n",
@@ -176,8 +166,6 @@
        "      <td>171.774849</td>\n",
        "      <td>187.427279</td>\n",
        "      <td>186.192317</td>\n",
-       "      <td>358.967755</td>\n",
-       "      <td>1.074590</td>\n",
        "      <td>2.256547</td>\n",
        "      <td>271.754788</td>\n",
        "      <td>270.489851</td>\n",
@@ -204,26 +192,19 @@
        "3         173.291759           188.914927            170.921307   \n",
        "4         184.687954           194.188427            171.774849   \n",
        "\n",
-       "   left_knee_angle  right_knee_angle  angle_for_ardhaChandrasana1  \\\n",
-       "0       186.249932        187.856616                   358.892513   \n",
-       "1       181.446741        185.428325                   359.556523   \n",
-       "2       171.887203        172.344633                     0.281002   \n",
-       "3       180.164934        180.759846                     0.222692   \n",
-       "4       187.427279        186.192317                   358.967755   \n",
+       "   left_knee_angle  right_knee_angle  hand_angle  left_hip_angle  \\\n",
+       "0       186.249932        187.856616  359.486611      278.429215   \n",
+       "1       181.446741        185.428325  352.515241       86.378515   \n",
+       "2       171.887203        172.344633    9.370972       88.749626   \n",
+       "3       180.164934        180.759846    2.714021       70.659265   \n",
+       "4       187.427279        186.192317    2.256547      271.754788   \n",
        "\n",
-       "   angle_for_ardhaChandrasana2  hand_angle  left_hip_angle  right_hip_angle  \\\n",
-       "0                     1.172412  359.486611      278.429215       277.825847   \n",
-       "1                     0.409024  352.515241       86.378515        83.511490   \n",
-       "2                   359.719951    9.370972       88.749626        86.819791   \n",
-       "3                   359.770327    2.714021       70.659265        68.569748   \n",
-       "4                     1.074590    2.256547      271.754788       270.489851   \n",
-       "\n",
-       "   neck_angle_uk  left_wrist_angle_bk  right_wrist_angle_bk  \n",
-       "0     240.255119           279.715500            279.265069  \n",
-       "1     178.781125            92.348562             90.218126  \n",
-       "2     352.381454            82.517299             81.332269  \n",
-       "3      33.896167            75.985298             75.006717  \n",
-       "4     331.858399           278.549857            276.457471  "
+       "   right_hip_angle  neck_angle_uk  left_wrist_angle_bk  right_wrist_angle_bk  \n",
+       "0       277.825847     240.255119           279.715500            279.265069  \n",
+       "1        83.511490     178.781125            92.348562             90.218126  \n",
+       "2        86.819791     352.381454            82.517299             81.332269  \n",
+       "3        68.569748      33.896167            75.985298             75.006717  \n",
+       "4       270.489851     331.858399           278.549857            276.457471  "
       ]
      },
      "metadata": {},
@@ -233,7 +214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Columns: ['pose_label', 'image_path', 'left_elbow_angle', 'right_elbow_angle', 'left_shoulder_angle', 'right_shoulder_angle', 'left_knee_angle', 'right_knee_angle', 'angle_for_ardhaChandrasana1', 'angle_for_ardhaChandrasana2', 'hand_angle', 'left_hip_angle', 'right_hip_angle', 'neck_angle_uk', 'left_wrist_angle_bk', 'right_wrist_angle_bk']\n"
+      "Columns: ['pose_label', 'image_path', 'left_elbow_angle', 'right_elbow_angle', 'left_shoulder_angle', 'right_shoulder_angle', 'left_knee_angle', 'right_knee_angle', 'hand_angle', 'left_hip_angle', 'right_hip_angle', 'neck_angle_uk', 'left_wrist_angle_bk', 'right_wrist_angle_bk']\n"
      ]
     }
    ],
@@ -246,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "b67e62fe",
    "metadata": {},
    "outputs": [
@@ -254,7 +235,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature columns: ['left_elbow_angle', 'right_elbow_angle', 'left_shoulder_angle', 'right_shoulder_angle', 'left_knee_angle', 'right_knee_angle', 'angle_for_ardhaChandrasana1', 'angle_for_ardhaChandrasana2', 'hand_angle', 'left_hip_angle', 'right_hip_angle', 'neck_angle_uk', 'left_wrist_angle_bk', 'right_wrist_angle_bk']\n",
+      "Feature columns: ['left_elbow_angle', 'right_elbow_angle', 'left_shoulder_angle', 'right_shoulder_angle', 'left_knee_angle', 'right_knee_angle', 'hand_angle', 'left_hip_angle', 'right_hip_angle', 'neck_angle_uk', 'left_wrist_angle_bk', 'right_wrist_angle_bk']\n",
       "Pose classes: ['Downdog', 'Goddess', 'Plank', 'Tree', 'Warrior2']\n",
       "Train/val/test sizes: 686 147 148\n"
      ]
@@ -289,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "41e014e1",
    "metadata": {},
    "outputs": [],
@@ -317,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "2d6a0611",
    "metadata": {},
    "outputs": [
@@ -391,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "955257a9",
    "metadata": {},
    "outputs": [],
@@ -441,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "c6bcd59b",
    "metadata": {},
    "outputs": [
@@ -449,26 +430,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 01 | train_loss=1.259 acc=0.496 | val_loss=1.220 acc=0.429\n",
-      "  ↳ New best model (val_acc=0.429)\n",
-      "Epoch 02 | train_loss=0.641 acc=0.789 | val_loss=0.397 acc=0.884\n",
+      "Epoch 01 | train_loss=1.254 acc=0.551 | val_loss=1.205 acc=0.517\n",
+      "  ↳ New best model (val_acc=0.517)\n",
+      "Epoch 02 | train_loss=0.630 acc=0.800 | val_loss=0.415 acc=0.884\n",
       "  ↳ New best model (val_acc=0.884)\n",
-      "Epoch 03 | train_loss=0.377 acc=0.862 | val_loss=0.231 acc=0.946\n",
+      "Epoch 03 | train_loss=0.320 acc=0.901 | val_loss=0.214 acc=0.946\n",
       "  ↳ New best model (val_acc=0.946)\n",
-      "Epoch 04 | train_loss=0.277 acc=0.905 | val_loss=0.174 acc=0.959\n",
+      "Epoch 04 | train_loss=0.254 acc=0.931 | val_loss=0.169 acc=0.952\n",
+      "  ↳ New best model (val_acc=0.952)\n",
+      "Epoch 05 | train_loss=0.168 acc=0.948 | val_loss=0.155 acc=0.959\n",
       "  ↳ New best model (val_acc=0.959)\n",
-      "Epoch 05 | train_loss=0.202 acc=0.936 | val_loss=0.153 acc=0.973\n",
+      "Epoch 06 | train_loss=0.166 acc=0.945 | val_loss=0.160 acc=0.952\n",
+      "Epoch 07 | train_loss=0.110 acc=0.962 | val_loss=0.159 acc=0.959\n",
+      "Epoch 08 | train_loss=0.103 acc=0.971 | val_loss=0.158 acc=0.966\n",
+      "  ↳ New best model (val_acc=0.966)\n",
+      "Epoch 09 | train_loss=0.086 acc=0.977 | val_loss=0.171 acc=0.966\n",
+      "Epoch 10 | train_loss=0.108 acc=0.971 | val_loss=0.166 acc=0.973\n",
       "  ↳ New best model (val_acc=0.973)\n",
-      "Epoch 06 | train_loss=0.208 acc=0.934 | val_loss=0.122 acc=0.973\n",
-      "Epoch 07 | train_loss=0.166 acc=0.945 | val_loss=0.115 acc=0.966\n",
-      "Epoch 08 | train_loss=0.116 acc=0.965 | val_loss=0.136 acc=0.973\n",
-      "Epoch 09 | train_loss=0.109 acc=0.965 | val_loss=0.154 acc=0.973\n",
-      "Epoch 10 | train_loss=0.119 acc=0.965 | val_loss=0.152 acc=0.966\n",
-      "Epoch 11 | train_loss=0.104 acc=0.964 | val_loss=0.148 acc=0.966\n",
-      "Epoch 12 | train_loss=0.086 acc=0.983 | val_loss=0.160 acc=0.959\n",
-      "Epoch 13 | train_loss=0.082 acc=0.969 | val_loss=0.172 acc=0.966\n",
-      "Epoch 14 | train_loss=0.114 acc=0.968 | val_loss=0.160 acc=0.966\n",
-      "Epoch 15 | train_loss=0.073 acc=0.977 | val_loss=0.154 acc=0.966\n",
+      "Epoch 11 | train_loss=0.108 acc=0.969 | val_loss=0.164 acc=0.973\n",
+      "Epoch 12 | train_loss=0.096 acc=0.975 | val_loss=0.158 acc=0.973\n",
+      "Epoch 13 | train_loss=0.095 acc=0.971 | val_loss=0.129 acc=0.973\n",
+      "Epoch 14 | train_loss=0.073 acc=0.977 | val_loss=0.131 acc=0.973\n",
+      "Epoch 15 | train_loss=0.079 acc=0.980 | val_loss=0.129 acc=0.973\n",
+      "Epoch 16 | train_loss=0.053 acc=0.984 | val_loss=0.137 acc=0.966\n",
+      "Epoch 17 | train_loss=0.056 acc=0.981 | val_loss=0.131 acc=0.973\n",
+      "Epoch 18 | train_loss=0.081 acc=0.985 | val_loss=0.146 acc=0.973\n",
+      "Epoch 19 | train_loss=0.071 acc=0.981 | val_loss=0.135 acc=0.973\n",
+      "Epoch 20 | train_loss=0.059 acc=0.987 | val_loss=0.138 acc=0.973\n",
       "[EARLY STOP] No val improvement for 10 epochs.\n"
      ]
     }
@@ -508,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "4431cefa",
    "metadata": {},
    "outputs": [
@@ -516,20 +504,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test loss=0.077 acc=0.986\n",
+      "Test loss=0.123 acc=0.980\n",
       "\n",
       "Classification report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "     Downdog       1.00      1.00      1.00        29\n",
-      "     Goddess       0.97      0.97      0.97        30\n",
+      "     Goddess       0.97      0.93      0.95        30\n",
       "       Plank       0.97      1.00      0.98        29\n",
       "        Tree       1.00      1.00      1.00        30\n",
-      "    Warrior2       1.00      0.97      0.98        30\n",
+      "    Warrior2       0.97      0.97      0.97        30\n",
       "\n",
-      "    accuracy                           0.99       148\n",
-      "   macro avg       0.99      0.99      0.99       148\n",
-      "weighted avg       0.99      0.99      0.99       148\n",
+      "    accuracy                           0.98       148\n",
+      "   macro avg       0.98      0.98      0.98       148\n",
+      "weighted avg       0.98      0.98      0.98       148\n",
       "\n"
      ]
     }
@@ -547,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "757d441b",
    "metadata": {},
    "outputs": [
