--- a/feedback_image.ipynb
+++ b/feedback_image.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "id": "61a6e1d4",
    "metadata": {},
    "outputs": [
@@ -36,10 +36,10 @@
     "with open(META_PATH, \"rb\") as f:\n",
     "    meta = pickle.load(f)\n",
     "\n",
-    "class_names  = meta[\"class_names\"]\n",
+    "class_names = meta[\"class_names\"]\n",
     "feature_cols = meta[\"feature_cols\"]\n",
-    "angle_stats  = meta[\"angle_stats\"]\n",
-    "hidden_dim   = meta.get(\"hidden_dim\", 256)\n",
+    "angle_stats = meta[\"angle_stats\"]\n",
+    "hidden_dim = meta.get(\"hidden_dim\", 256)\n",
     "\n",
     "print(\"Classes:\", class_names)\n",
     "print(\"Num features:\", len(feature_cols))"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "id": "393aa2f1",
    "metadata": {},
    "outputs": [
@@ -126,14 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "id": "d85f66db",
    "metadata": {},
    "outputs": [],
    "source": [
     "mp_pose = mp.solutions.pose\n",
     "\n",
-    "def calculateAngle(landmark1, landmark2, landmark3):\n",
+    "def calculate_angle(landmark1, landmark2, landmark3):\n",
     "    x1, y1, _ = landmark1\n",
     "    x2, y2, _ = landmark2\n",
     "    x3, y3, _ = landmark3\n",
@@ -150,79 +150,68 @@
     "def angles_finder(landmarks):\n",
     "    P = mp_pose.PoseLandmark\n",
     "\n",
-    "    left_elbow_angle = calculateAngle(\n",
+    "    left_elbow_angle = calculate_angle(\n",
     "        landmarks[P.LEFT_SHOULDER.value],\n",
     "        landmarks[P.LEFT_ELBOW.value],\n",
     "        landmarks[P.LEFT_WRIST.value]\n",
     "    )\n",
-    "    right_elbow_angle = calculateAngle(\n",
+    "    right_elbow_angle = calculate_angle(\n",
     "        landmarks[P.RIGHT_SHOULDER.value],\n",
     "        landmarks[P.RIGHT_ELBOW.value],\n",
     "        landmarks[P.RIGHT_WRIST.value]\n",
     "    )\n",
     "\n",
-    "    left_shoulder_angle = calculateAngle(\n",
+    "    left_shoulder_angle = calculate_angle(\n",
     "        landmarks[P.LEFT_ELBOW.value],\n",
     "        landmarks[P.LEFT_SHOULDER.value],\n",
     "        landmarks[P.LEFT_HIP.value]\n",
     "    )\n",
-    "    right_shoulder_angle = calculateAngle(\n",
+    "    right_shoulder_angle = calculate_angle(\n",
     "        landmarks[P.RIGHT_HIP.value],\n",
     "        landmarks[P.RIGHT_SHOULDER.value],\n",
     "        landmarks[P.RIGHT_ELBOW.value]\n",
     "    )\n",
     "\n",
-    "    left_knee_angle = calculateAngle(\n",
+    "    left_knee_angle = calculate_angle(\n",
     "        landmarks[P.LEFT_HIP.value],\n",
     "        landmarks[P.LEFT_KNEE.value],\n",
     "        landmarks[P.LEFT_ANKLE.value]\n",
     "    )\n",
-    "    right_knee_angle = calculateAngle(\n",
+    "    right_knee_angle = calculate_angle(\n",
     "        landmarks[P.RIGHT_HIP.value],\n",
     "        landmarks[P.RIGHT_KNEE.value],\n",
     "        landmarks[P.RIGHT_ANKLE.value]\n",
     "    )\n",
     "\n",
-    "    angle_for_ardhaChandrasana1 = calculateAngle(\n",
-    "        landmarks[P.RIGHT_ANKLE.value],\n",
-    "        landmarks[P.RIGHT_HIP.value],\n",
-    "        landmarks[P.LEFT_ANKLE.value]\n",
-    "    )\n",
-    "    angle_for_ardhaChandrasana2 = calculateAngle(\n",
-    "        landmarks[P.LEFT_ANKLE.value],\n",
-    "        landmarks[P.LEFT_HIP.value],\n",
-    "        landmarks[P.RIGHT_ANKLE.value]\n",
-    "    )\n",
-    "\n",
-    "    hand_angle = calculateAngle(\n",
+    "    hand_angle = calculate_angle(\n",
     "        landmarks[P.LEFT_ELBOW.value],\n",
     "        landmarks[P.RIGHT_SHOULDER.value],\n",
     "        landmarks[P.RIGHT_ELBOW.value]\n",
     "    )\n",
     "\n",
-    "    left_hip_angle = calculateAngle(\n",
+    "    left_hip_angle = calculate_angle(\n",
     "        landmarks[P.LEFT_SHOULDER.value],\n",
     "        landmarks[P.LEFT_HIP.value],\n",
     "        landmarks[P.LEFT_KNEE.value]\n",
     "    )\n",
-    "    right_hip_angle = calculateAngle(\n",
+    "    right_hip_angle = calculate_angle(\n",
     "        landmarks[P.RIGHT_SHOULDER.value],\n",
     "        landmarks[P.RIGHT_HIP.value],\n",
     "        landmarks[P.RIGHT_KNEE.value]\n",
     "    )\n",
     "\n",
-    "    neck_angle_uk = calculateAngle(\n",
+    "    neck_angle_uk = calculate_angle(\n",
     "        landmarks[P.NOSE.value],\n",
     "        landmarks[P.LEFT_SHOULDER.value],\n",
     "        landmarks[P.RIGHT_SHOULDER.value]\n",
     "    )\n",
     "\n",
-    "    left_wrist_angle_bk = calculateAngle(\n",
+    "    left_wrist_angle_bk = calculate_angle(\n",
     "        landmarks[P.LEFT_WRIST.value],\n",
     "        landmarks[P.LEFT_HIP.value],\n",
     "        landmarks[P.LEFT_ANKLE.value]\n",
     "    )\n",
-    "    right_wrist_angle_bk = calculateAngle(\n",
+    "    right_wrist_angle_bk = calculate_angle(\n",
     "        landmarks[P.RIGHT_WRIST.value],\n",
     "        landmarks[P.RIGHT_HIP.value],\n",
     "        landmarks[P.RIGHT_ANKLE.value]\n",
@@ -246,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "id": "b866214e",
    "metadata": {},
    "outputs": [],
@@ -284,16 +273,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "id": "f6a86b2d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def analyze_image(image_path, angle_threshold=15.0, show_image=True):\n",
-    "    # read image\n",
+    "POSE_ANGLE_WHITELIST = {\n",
+    "    \"downdog\": [\n",
+    "        \"left_shoulder_angle\", \"right_shoulder_angle\",\n",
+    "        \"left_hip_angle\", \"right_hip_angle\",\n",
+    "        \"left_knee_angle\", \"right_knee_angle\",\n",
+    "        \"left_wrist_angle_bk\", \"right_wrist_angle_bk\",\n",
+    "        \"neck_angle_uk\",\n",
+    "    ],\n",
+    "    \"plank\": [\n",
+    "        \"left_shoulder_angle\", \"right_shoulder_angle\",\n",
+    "        \"left_hip_angle\", \"right_hip_angle\",\n",
+    "        \"left_knee_angle\", \"right_knee_angle\",\n",
+    "        \"left_elbow_angle\", \"right_elbow_angle\",\n",
+    "        \"neck_angle_uk\",\n",
+    "    ],\n",
+    "    \"goddess\": [\n",
+    "        \"left_hip_angle\", \"right_hip_angle\",\n",
+    "        \"left_knee_angle\", \"right_knee_angle\",\n",
+    "        \"left_shoulder_angle\", \"right_shoulder_angle\",\n",
+    "    ],\n",
+    "    \"tree\": [\n",
+    "        \"left_hip_angle\", \"right_hip_angle\",\n",
+    "        \"left_knee_angle\", \"right_knee_angle\",\n",
+    "        \"left_shoulder_angle\", \"right_shoulder_angle\",\n",
+    "    ],\n",
+    "    \"warrior2\": [\n",
+    "        \"left_hip_angle\", \"right_hip_angle\",\n",
+    "        \"left_knee_angle\", \"right_knee_angle\",\n",
+    "        \"left_shoulder_angle\", \"right_shoulder_angle\",\n",
+    "        \"hand_angle\",\n",
+    "    ],\n",
+    "}\n",
+    "\n",
+    "def circular_diff(a, b):\n",
+    "    \"\"\"\n",
+    "    difference between two angles in degrees, result is in [-180, 180].\n",
+    "    \"\"\"\n",
+    "    return (a - b + 180) % 360 - 180"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "f553d63f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def describe_angle_feedback(pose, angle_name, diff, side):\n",
+    "    \"\"\"\n",
+    "    turn an angle deviation into a human-readable coaching tip.\n",
+    "    \"\"\"\n",
+    "    more = diff > 0  # angle larger than typical\n",
+    "    side_word = f\"{side} \" if side else \"\"\n",
+    "\n",
+    "    def hips_too_high_low():\n",
+    "        if more:\n",
+    "            return f\"Lower your {side_word}hip slightly; it's higher than the usual alignment.\"\n",
+    "        else:\n",
+    "            return f\"Lift your {side_word}hip a bit; it's lower than the usual alignment.\"\n",
+    "\n",
+    "    def knee_straight_vs_soft():\n",
+    "        if more:\n",
+    "            return f\"Straighten your {side_word}knee a bit more.\"\n",
+    "        else:\n",
+    "            return f\"Slightly soften your {side_word}knee instead of locking it.\"\n",
+    "\n",
+    "    def shoulder_open_vs_stack():\n",
+    "        if more:\n",
+    "            return f\"Push the floor away and open your {side_word}shoulder a bit more.\"\n",
+    "        else:\n",
+    "            return f\"Stack your {side_word}shoulder more strongly; don't let it collapse.\"\n",
+    "\n",
+    "    def wrist_line_feedback():\n",
+    "        if more:\n",
+    "            return f\"Bring your {side_word}arm closer to a straight line from shoulder to wrist.\"\n",
+    "        else:\n",
+    "            return f\"Relax your {side_word}arm a bit; it's straighter than typical.\"\n",
+    "\n",
+    "    def neck_feedback():\n",
+    "        if more:\n",
+    "            return \"Lengthen the back of your neck; your head is tipped more than usual.\"\n",
+    "        else:\n",
+    "            return \"Gently relax your neck; you're keeping it more neutral than most samples.\"\n",
+    "\n",
+    "    # pose specific logic\n",
+    "    # Downdog & Plank\n",
+    "    if pose in [\"downdog\", \"plank\"]:\n",
+    "        if \"hip_angle\" in angle_name:\n",
+    "            return hips_too_high_low()\n",
+    "        if \"knee_angle\" in angle_name:\n",
+    "            return knee_straight_vs_soft()\n",
+    "        if \"shoulder_angle\" in angle_name:\n",
+    "            return shoulder_open_vs_stack()\n",
+    "        if \"wrist_angle_bk\" in angle_name:\n",
+    "            return wrist_line_feedback()\n",
+    "        if \"neck_angle\" in angle_name:\n",
+    "            return neck_feedback()\n",
+    "\n",
+    "    # Goddess & Warrior2: big bent knees + open hips\n",
+    "    if pose in [\"goddess\", \"warrior2\"]:\n",
+    "        if \"knee_angle\" in angle_name:\n",
+    "            if more:\n",
+    "                return f\"Bend your {side_word}knee a bit deeper.\"\n",
+    "            else:\n",
+    "                return f\"Straighten your {side_word}knee just a touch.\"\n",
+    "        if \"hip_angle\" in angle_name:\n",
+    "            if more:\n",
+    "                return f\"Draw your {side_word}hip slightly under you; it's more open than typical.\"\n",
+    "            else:\n",
+    "                return f\"Open your {side_word}hip slightly more to the side.\"\n",
+    "        if \"shoulder_angle\" in angle_name:\n",
+    "            return shoulder_open_vs_stack()\n",
+    "        if \"hand_angle\" in angle_name:\n",
+    "            if more:\n",
+    "                return \"Level your arms; one arm is lifted higher than usual.\"\n",
+    "            else:\n",
+    "                return \"Lift your arms to a level line; they're lower than typical.\"\n",
+    "\n",
+    "    # Tree: balance + standing leg alignment\n",
+    "    if pose == \"tree\":\n",
+    "        if \"knee_angle\" in angle_name:\n",
+    "            if more:\n",
+    "                return f\"Press your {side_word}knee out a bit more for a wider opening.\"\n",
+    "            else:\n",
+    "                return f\"Keep your {side_word}knee from collapsing inward.\"\n",
+    "        if \"hip_angle\" in angle_name:\n",
+    "            if more:\n",
+    "                return f\"Square your {side_word}hip a bit more; it's opening more than usual.\"\n",
+    "            else:\n",
+    "                return f\"Open your {side_word}hip slightly to the side.\"\n",
+    "        if \"shoulder_angle\" in angle_name:\n",
+    "            return shoulder_open_vs_stack()\n",
+    "        if \"neck_angle\" in angle_name:\n",
+    "            return neck_feedback()\n",
+    "    \n",
+    "    return None # no cutom rules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "11afbd3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def analyze_image(image_path, std_factor=2.0, min_deg=10.0, show_image=True):\n",
+    "    # run mediapipe\n",
     "    img = cv2.imread(image_path)\n",
     "    if img is None:\n",
-    "        print(\"[ERROR] Could not read image:\", image_path)\n",
+    "        print(\"Could not read image:\", image_path)\n",
     "        return\n",
     "\n",
     "    out_img, landmarks = landmarks_from_image(img)\n",
@@ -301,20 +435,12 @@
     "        print(\"No pose detected.\")\n",
     "        return\n",
     "\n",
-    "    # compute angles\n",
     "    angle_dict = angles_finder(landmarks)\n",
     "\n",
-    "    # build feature vectors\n",
-    "    feats = []\n",
-    "    for name in feature_cols:\n",
-    "        if name not in angle_dict:\n",
-    "            # if some extra feature exists from training, just 0 it\n",
-    "            feats.append(0.0)\n",
-    "        else:\n",
-    "            feats.append(angle_dict[name])\n",
-    "\n",
+    "    feats = [angle_dict.get(name, 0.0) for name in feature_cols] # feature vectors\n",
     "    x = torch.tensor(feats, dtype=torch.float32, device=device).unsqueeze(0)\n",
     "\n",
+    "    # predict\n",
     "    with torch.no_grad():\n",
     "        logits = model(x)\n",
     "        probs = torch.softmax(logits, dim=1)[0].cpu().numpy()\n",
@@ -324,44 +450,69 @@
     "\n",
     "    print(f\"Predicted pose: {cls_name} (prob={confidence:.3f})\")\n",
     "\n",
-    "    # angle stats for this pose\n",
+    "    # get angle stats\n",
     "    stats = angle_stats.get(cls_name, None)\n",
     "    if stats is None:\n",
     "        print(\"No angle stats found for this pose (should not happen).\")\n",
     "        return\n",
     "\n",
     "    mean_angles = np.array(stats[\"mean\"])\n",
-    "    diffs = np.array(feats) - mean_angles\n",
+    "    std_angles  = np.array(stats[\"std\"])\n",
     "\n",
-    "    print(\"\\nAngle deviations from typical values for this pose \"\n",
-    "          f\"(threshold ≈ {angle_threshold}°):\")\n",
+    "    whitelist = POSE_ANGLE_WHITELIST.get(cls_name, feature_cols)\n",
+    "\n",
+    "    print(\n",
+    "        \"\\nFeedback (we flag joints where |diff| > max(\"\n",
+    "        f\"{std_factor}std, {min_deg}°)):\"\n",
+    "    )\n",
     "\n",
     "    any_flag = False\n",
-    "    for name, value, mean, diff in zip(feature_cols, feats, mean_angles, diffs):\n",
-    "        if abs(diff) < angle_threshold:\n",
+    "\n",
+    "    for name, value, mean, std in zip(feature_cols, feats, mean_angles, std_angles):\n",
+    "        if name not in whitelist:\n",
     "            continue\n",
+    "\n",
+    "        diff = circular_diff(value, mean)\n",
+    "        thresh = max(min_deg, std_factor * std)\n",
+    "\n",
+    "        if abs(diff) < thresh:\n",
+    "            continue\n",
+    "\n",
     "        any_flag = True\n",
+    "        side = \"left\" if \"left_\" in name else \"right\" if \"right_\" in name else \"\"\n",
     "        direction = \"more\" if diff > 0 else \"less\"\n",
-    "        print(f\"  - {name}: {value:.1f}° vs {mean:.1f}° \"\n",
-    "              f\"(about {abs(diff):.1f}° {direction} than typical)\")\n",
+    "\n",
+    "        # coaching tip\n",
+    "        text = describe_angle_feedback(cls_name, name, diff, side)\n",
+    "        if text is None:\n",
+    "            text = (\n",
+    "                f\"Your {name.replace('_', ' ')} is about \"\n",
+    "                f\"{abs(diff):.1f}° {direction} than typical.\"\n",
+    "            )\n",
+    "\n",
+    "        print(\n",
+    "            f\"  - {text} \"\n",
+    "            f\"(your {name} {value:.1f}°, typical {mean:.1f}°; \"\n",
+    "            f\"≈{abs(diff):.1f}° {direction}, threshold ≈{thresh:.1f}°)\"\n",
+    "        )\n",
     "\n",
     "    if not any_flag:\n",
-    "        print(\"  All checked joint angles are within ~\"\n",
-    "              f\"{angle_threshold}° of typical values. Looks good!\")\n",
+    "        print(\n",
+    "            f\"All checked joint angles look good!\"\n",
+    "        )\n",
     "\n",
     "    if show_image:\n",
-    "        # display annotated image\n",
     "        from matplotlib import pyplot as plt\n",
     "        plt.figure(figsize=(5, 8))\n",
     "        plt.imshow(cv2.cvtColor(out_img, cv2.COLOR_BGR2RGB))\n",
     "        plt.title(f\"Predicted: {cls_name}\")\n",
     "        plt.axis(\"off\")\n",
-    "        plt.show()"
+    "        plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "id": "2cf5b3de",
    "metadata": {},
    "outputs": [
@@ -371,13 +522,8 @@
      "text": [
       "Predicted pose: Downdog (prob=1.000)\n",
       "\n",
-      "Angle deviations from typical values for this pose (threshold ≈ 50.0°):\n",
-      "  - hand_angle: 3.2° vs 112.9° (about 109.7° less than typical)\n",
-      "  - left_hip_angle: 296.2° vs 215.6° (about 80.6° more than typical)\n",
-      "  - right_hip_angle: 294.4° vs 215.2° (about 79.2° more than typical)\n",
-      "  - neck_angle_uk: 117.6° vs 198.2° (about 80.6° less than typical)\n",
-      "  - left_wrist_angle_bk: 293.4° vs 215.5° (about 77.8° more than typical)\n",
-      "  - right_wrist_angle_bk: 292.9° vs 215.3° (about 77.7° more than typical)\n"
+      "Feedback (we flag joints where |diff| > max(2.0std, 10.0°)):\n",
+      "All checked joint angles look good!\n"
      ]
     },
     {
@@ -393,7 +539,7 @@
    ],
    "source": [
     "test_image = \"test/image.png\"\n",
-    "analyze_image(test_image, angle_threshold=50.0)"
+    "analyze_image(test_image, std_factor=2.0, min_deg=10.0)"
    ]
   }
  ],
